# trustify-da-vulnerabilty-intel

./: Cargo.toml  LICENSE  README.md  config.yaml.example
docs/: CHANGELOG.md  README.md  TODO.md  architecture.md  code-review-recommendations.md  configuration.md  llm-improvements-implemented.md  prompt-review-recommendations.md  remediation-plan.md  vulnerability-assessment.md
etc/deploy/compose/: compose.yaml
examples/: plan.json
output/: analysis.json  plan.json
src/: app.rs  main.rs
src/api/: document.rs  error.rs  health.rs  mod.rs  openapi.rs  vulnerability.rs
src/db/: mod.rs  models.rs  repository.rs
src/model/: assessments.rs  claims.rs  config.rs  convert.rs  intel.rs  mod.rs  osv.rs  redhat_csaf.rs  remediations.rs
src/model/assessment/: mod.rs
src/model/claims/: mod.rs
src/model/remediations/: action_extraction.rs  mod.rs
src/retriever/: bugzilla.rs  cve_org.rs  generic.rs  github_advisory.rs  github_commit.rs  github_cve.rs  github_issue.rs  github_release.rs  mod.rs  nvd.rs  redhat_csaf.rs
src/service/: cache.rs  cache_keys.rs  claim_extraction.rs  depsdev.rs  document.rs  llm.rs  mod.rs  osv.rs  redhat_csaf.rs  reference_selector.rs  remediation.rs  vulnerability.rs
src/service/assessment/: confidence.rs  converters.rs  error.rs  mod.rs  prompts.rs  validation.rs
src/service/claims/: error.rs  filters.rs  mod.rs  prompts.rs  synthesis.rs  validation.rs
src/service/remediation/: applicability.rs  converters.rs  mod.rs  prompts.rs  validation.rs  version.rs
