[package]
name = "trustify-da-agents"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.12.1"
async-trait = "0.1"
futures = "0.3"
htmd = "0.1"
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
regex = "1.11"
scraper = "0.22"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid"] }
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
log = "0.4.29"
reqwest = { version = "0.13.1", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = { version = "2.5", features = ["serde"] }
urlencoding = "2.1"
uuid = { version = "1.11", features = ["v4"] }
utoipa = { version = "5.4.0", features = ["yaml", "actix_extras", "chrono", "url"] }
utoipa-actix-web = "0.1.2"
rig-core = "0.29.0"
schemars = "1.0"
semver = "1.0"
